UCF-APR2.4/ftr main/force-app/main/default/objects/FulfilmentRequestEvent__e/FulfilmentRequestEvent__e.object-meta.xml
<CustomObject>
    <label>Fulfilment Request Event</label>
    <pluralLabel>Fulfilment Request Events</pluralLabel>
</CustomObject>