UCF-APR2.4/ftr main/force-app/main/default/objects/FulfilmentRequestEvent__e/fields/FRL_Id__c.field-meta.xml
<CustomField>
    <fullName>FRL_Id__c</fullName>
    <label>FRL_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>