UCF-APR2.4/ftr main/force-app/main/default/objects/FulfilmentRequestEvent__e/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <label>MethodName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>